# tp-so

./: .cproject  .project  Makefile  ProjectHome.md  README  all_display.sh  helpers.sh  screen_consola  screen_dc_web  screen_nodos  testing_nodos.sh
config/: webserver.xml
config/dc/: nodeManager.xml  webManager.xml
config/nodos/: 1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml
config/nodos/linea/: 2.xml  6.xml
config/nodos/simple/: 2.xml
config/nodos/todo-a-uno/: 3.xml  4.xml  6.xml  7.xml
examen/: TEST-TP2-fecha1.doc
examen/jobs/: job_1.xml  job_2.xml  job_3.xml  job_4.xml  job_5.xml  job_6.xml  job_7.xml
src/: CMakeLists.txt  so_agnostic.h
src/ipc/: CMakeLists.txt  ipcDaemon.cxx  ipcDaemon.h  ipcstream.cxx  ipcstream.h  listener.cxx  listener.h  point.cxx  point.h  socket.cxx  socket.h  socketBuilder.cxx  socketBuilder.h  socketEvent.cxx  socketEvent.h  socketGate.cxx  socketGate.h  tecladoConsola.cxx  tecladoConsola.h  webConnector.h
src/ipc/ansi/: CMakeLists.txt  webConnector.cxx  webConnector.h
src/libs/macos/: libdb-4.dylib
src/md5/: CMakeLists.txt  md5.c  md5.h
src/messages/: daemon-daemon.h  dc-messages.h  deamon-taskexecuter.h  interface-daemon.h  task_states.h  teclado-consola.h  webserver-buffer.h
src/model/: CMakeLists.txt  dependency.cxx  dependency.h  job.cxx  job.h  jobSet.cxx  jobSet.h  resource.cxx  resource.h  result.cxx  result.h  target.cxx  target.h  task.cxx  task.h  taskResult.cxx  taskResult.h
src/node/: CMakeLists.txt
src/node/daemon/: CMakeLists.txt  admTask.c  admTask.h  commands.cxx  commands.h  common.cxx  common.h  daemon.cxx  handshake.cxx  handshake.h  migration.c  migration.h  netDiscovery.cxx  netDiscovery.h  networkManager.cxx  networkManager.h
src/node/dc/: CMakeLists.txt  dc.c  dc.h  dc_main.c  imc.c  imc.h  nodeManager.c  nodeManager.h  taskManager.c  taskManager.h  webManager.c  webManager.h
src/node/interface/: CMakeLists.txt  commands.cxx  commands.h  interface.cxx  shell.cxx  shell.h
src/node/task-executer/: CMakeLists.txt  taskExecuter.c  taskExecuter.h  threadlocal.c  threadlocal.h
src/tests/: CMakeLists.txt  config.xml  job.xml  prueba-otra.xml  prueba-parecida.xml  prueba.xml  prueba1.xml  prueba2.xml  prueba3.xml  prueba4.xml  prueba5.xml  prueba6.xml  prueba7.xml  taskResult.xml  testAnsiConfiguration.cxx  testAnsiConfigurationTaskResult.cxx  testConfiguration.cxx  testDB.cxx  testDC-MigrationMemory.cxx  testDataPack.cxx  testFork.cxx  testForked.c  testIMC.c  testIPCShareMemory.c  testIPCShareMemory_seba.c  testIpcStream.cxx  testListener.cxx  testMD5.c  testModel.cxx  testNodeManager.c  testRecvMsgQueue.cxx  testRegex.c  testSendMsgQueue.cxx  testSharedLib.cxx  testSocket.cxx  testTaskExecuter.c  testTaskManager.c  testTrace.cxx  testWM-TM.c  testWM.cxx  (+1 more)
src/util/: CMakeLists.txt  characters.c  config.cxx  config.h  log.cxx  log.h  log_ansi.h  template.cxx  template.h  tpl.c  trace.cxx  trace.h  weighted.c  weighted.h
src/webserver/: CMakeLists.txt  conectorCliente.cxx  conectorCliente.h  db.cxx  db.h  resolvers.cxx  resolvers.h  webserver.cxx  winsock.cxx  winsock.h
src/windows/ws/: ws.sln
src/windows/ws/ws/: copiar-jobs.bat  instalar-librerias.bat  so_agnostic.h  vasprintf.cpp  webserver.cpp  webserver.h  windows_miss.cpp  ws.vcproj
src/windows/ws/ws/config/: daemon.xml  interfaz.xml  webserver.xml
src/windows/ws/ws/config/dc/: nodeManager.xml  webManager.xml
src/windows/ws/ws/config/nodos/: 1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml
src/windows/ws/ws/config/nodos/linea/: 1.xml  3.xml  4.xml  5.xml  7.xml  8.xml
src/windows/ws/ws/config/nodos/simple/: 1.xml  3.xml
src/windows/ws/ws/config/nodos/todo-a-uno/: 1.xml  2.xml  5.xml  8.xml
src/windows/ws/ws/unix/: dirent.h  unistd.h
src/windows/ws/ws/unix/sys/: socket.h
src/xml/: CMakeLists.txt  configuration.cxx  configuration.h
src/xml/ansi/: CMakeLists.txt  configuration.cxx  configuration.h
