add_library (Job job.cxx)
add_library (Target target.cxx)
add_library (Task task.cxx)
target_link_libraries (Task Job)
add_library (Resource resource.cxx)
add_library (Dependency dependency.cxx)
add_library (Result result.cxx)
add_library (TaskResult taskResult.cxx)
target_link_libraries (TaskResult Result)
